--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 	<header>
 		<img src="https://dl.dropboxusercontent.com/s/iufgdaxcd6wm274/index.jpg?dl=0" alt="Logo" width="200">
-		<h1>How to select ETFE print pattern</h1>
+		<h1>How to select ETFE print pattern from AGC NJ 250microns foil</h1>
 		<div class="container">
       <div class="image"> <img src="https://dl.dropboxusercontent.com/s/cwpvptf5w6to8kk/P46D16.png?dl=0" alt="ETFE" height="150px"/> </div> 
       <div class="image"> <img src="https://dl.dropboxusercontent.com/s/ya15shbo2t93m1t/P63D04.png?dl=0" alt="ETFE" height="150px"/> </div> 
